# badger

./: CMakeLists.txt  INSTALL.md  README.md  badger_badge.c  badger_key.c  badger_record.c  badger_verify.c  badgerd.c  verify.c
include/: badger.h
src/: badger.c  badger_badge.c  badger_err.c  badger_err.h  badger_key.c  badger_record.c  badger_verify.c  test_key.c
